# stompbox

./: .gitmodules  CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: build.yml
Source/: CMakeLists.txt  GuitarClient.cpp  GuitarSimComponent.cpp  GuitarSimComponent.h  PluginFactory.cpp  PluginFactory.h  PluginProcessor.cpp  PluginProcessor.h  Serial.h  SerialDisplayInterface.cpp  SerialDisplayInterface.h  SerialTFT.h  StompBox.cpp  StompBox.h
Source/NAM/: dsp.cpp  dsp.h
Source/Stomps/: AmpStage.cpp  AmpStage.h  AudioFilePlayer.cpp  AudioFilePlayer.h  AudioFileRecorder.cpp  AudioFileRecorder.h  AutoWah.cpp  AutoWah.h  Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  ConvolutionReverb.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Flanger.cpp  Flanger.h  Fuzz.cpp  Fuzz.h  FuzzMaster.cpp  FuzzMaster.h  Gain.cpp  Gain.h  GraphicEqualizer.cpp  GraphicEqualizer.h  GuitarConvolver.cpp  GuitarConvolver.h  GuitarServer.h  NAM.cpp  NAM.h  Overdrive.cpp  Overdrive.h  PeakingFilter.cpp  PeakingFilter.h  Phaser.cpp  Phaser.h  PitchDetector.cpp  PitchDetector.h  (+16 more)
Source/Stomps/WDL/: fft.h
Source/WDL/: Oversampler.h  convoengine.cpp  convoengine.h  denormal.h
Source/WDL/HIIR/: FPUUpsampler2x.h
Source/stompbox-jack/: CMakeLists.txt
stompbox/: AudioFile.cpp  AudioFile.h  CMakeLists.txt  DoubleBufferedResource.h  FileType.h  GuitarClient.h  PluginFactory.cpp  PluginFactory.h  PluginProcessor.cpp  PluginProcessor.h  Serial.cpp  Serial.h  SerialDisplayInterface.cpp  SerialDisplayInterface.h  SerialTFT.h  StompBox.cpp  StompBox.h  StompboxClient.cpp  StompboxClient.h  StompboxServer.cpp  StompboxServer.h  SysExMapper.cpp  SysExMapper.h
stompbox-capi/: CMakeLists.txt  StompboxCAPI.cpp  StompboxCAPI.h
stompbox-jack/: CMakeLists.txt  stompbox-jack.cpp
stompbox/Stomps/: AmpStage.cpp  AmpStage.h  AudioFilePlayer.cpp  AudioFilePlayer.h  AudioFileRecorder.cpp  AudioFileRecorder.h  AutoWah.cpp  AutoWah.h  Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  ConvolutionReverb.h  Crossover.cpp  Crossover.h  Delay.cpp  Delay.h  Distortion.cpp  Distortion.h  Flanger.cpp  Fuzz.cpp  Fuzz.h  FuzzMaster.cpp  FuzzMaster.h  Gain.cpp  Gain.h  GraphicEqualizer.cpp  GraphicEqualizer.h  GuitarConvolver.cpp  GuitarConvolver.h  GuitarServer.cpp  GuitarServer.h  HighLowFilter.cpp  HighLowFilter.h  MultiGate.cpp  MultiGate.h  NAM.cpp  NAM.h  NAMMultiBand.cpp  NAMMultiBand.h  (+24 more)
stompbox/Stomps/WDL/: fft.c
